--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:description" content="Free Hindi font style generator with 50+ stylish fonts. Convert your text to beautiful Hindi fonts, download as images, and copy to use anywhere.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://ankpritam.github.io/hindifontstyle.github.io/">
+    <link rel="canonical" href="https://hindifontstyle.github.io/">
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles/main.css">
@@ -47,6 +47,7 @@
         }
     }
     </script>
+    <meta name="google-site-verification" content="IHn-JDMqpqHZF9-vzhK8uUVr7VIVoBpwZ08plXPxmgc" />
 </head>
 <body>
     <header>
