--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <header>
         <div class="header-top">
-            <h1>=Hindi Font Style - हिंदी फॉन्ट स्टाइल जनरेटर</h1>
+            <h1>Hindi Font Style - हिंदी फॉन्ट स्टाइल जनरेटर</h1>
             <p class="subtitle">convert your normal font in stylish hindi font easily.</p>
         </div>
     </header>
@@ -97,7 +97,10 @@
                 अगला <i class="fas fa-chevron-right" aria-hidden="true"></i>
             </button>
         </nav
-<article style="max-width:1024px; padding:10px; ">
+<article>
+<div  style="max-width:1024px; padding:10px; ">>
+    
+
     <h2>Explore Unique Hindi Font Styles Online
 </h2>
 <p>find wide range of beautiful and creative Hindi font styles perfect for social media posts, design projects, or simply improve your writing. Whether you're a designer, student, or content creator, our tools help you stand out with eye-catching text in your native language.</p
@@ -107,6 +110,7 @@
 <h2>Stylish Hindi Font for Every occasion 
 </h2>        
 <p>Add uniquness to  your text with these collection of stylish Hindi fonts. From normal and classic to modern and quirky styles, you’ll find the perfect font to match your mood and message. Try this stylish hindi fonts and impress your friends with stylish writing in Hindi.</p>                                                                                                                                          
+</div>
 </article>
     </main>
 
