--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
             </button>
         </nav
 <article>
-<div  style="max-width:1024px; padding:10px; ">>
+<div  style="max-width:1024px; padding:20px;display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 10px;
+" >
     
 
     <h2>Explore Unique Hindi Font Styles Online
