--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hindi Font Style Generator - स्टाइलिश हिंदी फॉन्ट जनरेटर</title>
+    <title>Hindi Font Style - स्टाइलिश हिंदी फॉन्ट जनरेटर</title>
     <meta name="description" content="Free Hindi font style generator with 50+ stylish fonts. Convert your text to beautiful Hindi fonts, download as images, and copy to use anywhere. हिंदी फॉन्ट स्टाइल जनरेटर।">
     <meta name="keywords" content="hindi font, hindi font style, hindi text generator, stylish hindi fonts, hindi typing, देवनागरी फॉन्ट, हिंदी फॉन्ट स्टाइल, हिंदी टाइपिंग">
     
@@ -108,7 +108,7 @@
 
     <h2>Explore Unique Hindi Font Styles Online
 </h2>
-<p>find wide range of beautiful and creative Hindi font styles perfect for social media posts, design projects, or simply improve your writing. Whether you're a designer, student, or content creator, our tools help you stand out with eye-catching text in your native language.</p
+<p>find wide range of beautiful and creative <a href="https://hindifontstyle.in/"> Hindi font style</a> perfect for social media posts, design projects, or simply improve your writing. Whether you're a designer, student, or content creator, our tools help you stand out with eye-catching text in your native language.</p
    <h2>Hindi Font Style Generator</h2>                                                                                                                                  <p>Use our free and easy-to-use Hindi font style generator to instantly transform your plain Hindi text into bold, italic, fancy, or stylish versions. Just type and copy or download — no login required. It's for Instagram bios, WhatsApp status, and YouTube thumbnails.
 
 </p> 
