--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     }
     </script>
     <meta name="google-site-verification" content="IHn-JDMqpqHZF9-vzhK8uUVr7VIVoBpwZ08plXPxmgc" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8176395569367940"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
